--- a/css/main.scss
+++ b/css/main.scss
@@ -311,7 +311,7 @@ main {
       height: 100%;
       top: 0;
       left: 0;
-      padding: 20px 50px;
+      padding: 40px 80px;
       backdrop-filter: blur(5px);
       transition: all 0.5s;
 
@@ -336,7 +336,7 @@ main {
         .inter_desc {
           width: 40%;
           color: #fff;
-          padding: 20px 60px;
+          padding: 50px 60px;
 
           h2 {
             font-size: 34px;
@@ -362,8 +362,8 @@ main {
         }
 
         .inter_img {
-          width: 40%;
-          transform: translate(-2%, -32%);
+          width: 45%;
+          transform: translate(-2%, -35%);
 
           img {
             width: 80%;
@@ -372,7 +372,7 @@ main {
         }
 
         .inter_desc {
-          width: 60%;
+          width: 55%;
           color: #fff;
         }
 
@@ -385,8 +385,8 @@ main {
       .popup_close {
         position: absolute;
         opacity: 0;
-        top: 20px;
-        right: 20px;
+        top: 30px;
+        right: 50px;
         border: 2px solid #fff;
         width: 50px;
         height: 50px;
@@ -815,7 +815,7 @@ main {
         padding-top: 100px;
 
         .swiper-slide {
-          width: 60%;
+          width: 55%;
           cursor: pointer;
           transition: .3s;
           border: 1px solid #1e1e1e;
@@ -830,16 +830,16 @@ main {
           }
 
           &.swiper-slide-active {
-            width: 60%;
-            transform: translateY(-15%) scale(1);
+            width: 55%;
+            transform: translateY(-10%) scale(1);
           }
 
           &.swiper-slide-prev {
-            transform: translateX(5%) scale(0.8);
+            transform: translate(5%, 5%) scale(0.8);
           }
 
           &.swiper-slide-next {
-            transform: translateX(-5%) scale(0.8);
+            transform: translate(-5%, 5%) scale(0.8);
           }
 
           .imgbox {
@@ -864,15 +864,65 @@ main {
           justify-content: center;
 
           li {
+            position: relative;
             cursor: pointer;
-            padding: 50px;
+            padding: 30px;
+            margin-right: 20px;
             overflow: hidden;
 
+            &::before,
+            &::after {
+              content: '';
+              display: block;
+              position: absolute;
+              background-color: #fff;
+              width: 0;
+              height: 0;
+              transition: .3s;
+            }
+
+            &::before {
+              left: 0;
+              bottom: 0;
+            }
+
+            &::after {
+              right: 0px;
+              bottom: 0px;
+            }
+
+            &:last-child {
+              margin-right: 0;
+            }
+
             &:hover {
+              transform: translateY(-20px);
+
+              &::before {
+                width: 3px;
+                height: 100%;
+              }
+
+              &::after {
+                width: 100%;
+                height: 3px;
+              }
+
               .util_gif {
                 img {
                   scale: 1.2;
                 }
+
+                &::before {
+                  width: 3px;
+                  height: 100%;
+                }
+
+                &::after {
+                  width: 100%;
+                  height: 3px;
+                }
+
               }
             }
 
@@ -884,6 +934,27 @@ main {
               img {
                 width: 100%;
                 transition: .3s;
+              }
+
+              &::before,
+              &::after {
+                content: '';
+                display: block;
+                position: absolute;
+                background-color: #fff;
+                width: 0;
+                height: 0;
+                transition: .3s;
+              }
+
+              &::before {
+                top: 0;
+                right: 0;
+              }
+
+              &::after {
+                top: 0px;
+                left: 0px;
               }
             }
 
@@ -898,182 +969,20 @@ main {
     }
   }
 
-
-
-  /* .gallery {
-      display: flex;
-      width: 100%;
-
-      .gallery_left,
-      .gallery_center,
-      .gallery_right {
-        width: 100%;
-
-        .img_box {
-          position: relative;
-          padding: 4px;
-
-          &::before,
-          &::after {
-            content: '';
-            display: block;
-            position: absolute;
-            background-color: #fff;
-            width: 0;
-            height: 0;
-            transition: .3s;
-          }
-
-          &:hover {
-            &::before {
-              width: 4px;
-              height: 100%;
-            }
-
-            &::after {
-              width: 100%;
-              height: 4px;
-            }
-
-            .gallery_img {
-              &::before {
-                width: 100.5%;
-                height: 4px;
-              }
-
-              &::after {
-                width: 4px;
-                height: 100%;
-              }
-
-              img {
-                transform: scale(1.2);
-              }
-            }
-
-          }
-
-          &::before {
-            left: -3px;
-            bottom: 0;
-          }
-
-          &::after {
-            right: 0px;
-            bottom: 0px;
-          }
-
-          .gallery_img {
-            overflow: hidden;
-
-            &::before {
-              content: '';
-              display: block;
-              position: absolute;
-              left: -3px;
-              top: -3px;
-              background-color: #fff;
-              width: 0;
-              height: 0;
-              transition: .3s;
-            }
-
-            &::after {
-              content: '';
-              display: block;
-              position: absolute;
-              right: 0px;
-              top: 0px;
-              background-color: #fff;
-              width: 0;
-              height: 0;
-              transition: .3s;
-            }
-
-
-            img {
-              width: 100%;
-              height: 100%;
-              transition: .6s;
-              cursor: pointer;
-            }
-
-          }
-        }
-
-
-      }
-
-      .gallery_left {
-        width: 28%;
-
-        .img_box {
-          padding-left: 0;
-
-          &:nth-child(1) {
-            .gallery_img {
-              height: 580px;
-            }
-          }
-
-
-          &:nth-child(2) {
-            .gallery_img {}
-          }
-        }
-      }
-
-      .gallery_center {
-        width: 36%;
-
-        .img_box {
-          &:nth-child(1) {
-            .gallery_img {}
-          }
-
-
-          &:nth-child(2) {
-            .gallery_img {
-              height: 580px;
-            }
-          }
-        }
-      }
-
-      .gallery_right {
-        width: 36%;
-
-        .img_box {
-          padding-right: 0;
-
-          &:nth-child(1) {
-            .gallery_img {}
-          }
-
-
-          &:nth-child(2) {
-            .gallery_img {}
-          }
-        }
-      }
-
-
-    }
-  } */
 }
 
 body {
   &::-webkit-scrollbar {
-    width: 12px;
+    width: 10px;
   }
 
   &::-webkit-scrollbar-thumb {
     height: 25%;
     background: #1e1e1e;
-    border-radius: 10px;
+    border-radius: 8px;
   }
 
   &::-webkit-scrollbar-track {
-    background: rgba(17, 17, 18, 0.5);
+    background: #ccc;
   }
 }
