--- a/css/main.scss
+++ b/css/main.scss
@@ -211,31 +211,37 @@ main {
       }
     }
 
-    .design_text {
-      display: flex;
-      flex-direction: column;
+    .design_inner {
       position: absolute;
-      top: 200px;
+      top: 0;
       left: 0;
-      padding-left: 200px;
-      color: #fff;
+      width: 100%;
+      height: 100%;
+      padding: 100px 150px;
+    }
+
+    .design_text {
+      width: 550px;
 
       h2 {
         font-size: 4.5rem;
         padding-bottom: 50px;
         letter-spacing: 2px;
         font-weight: 500;
+        color: #fff;
       }
 
       .design_desc {
         position: relative;
-        width: 550px;
+
+        color: #fff;
 
         &::before {
           content: '';
           position: absolute;
           width: 1px;
           height: 82px;
+          bottom: 88px;
           background-color: #fff;
           margin-right: 20px;
         }
@@ -243,8 +249,8 @@ main {
         p {
           width: 100%;
           font-size: 18px;
-          margin-left: 10px;
           line-height: 1.5;
+          margin-left: 10px;
         }
       }
 
@@ -297,6 +303,28 @@ main {
             transition: all 0.4s;
             opacity: 0;
           }
+        }
+
+      }
+    }
+
+    .design_text2 {
+      display: flex;
+      width: 100%;
+      justify-content: flex-end;
+      margin-top: 70px;
+
+      .design_desc2 {
+        width: 560px;
+
+        p {
+          &.tit {
+            font-size: 22px;
+            padding-bottom: 30px;
+          }
+
+          font-size: 30px;
+          color: #fff;
         }
 
       }
