--- a/css/main.css
+++ b/css/main.css
@@ -470,7 +470,9 @@ main .performance_section {
   overflow: hidden;
 }
 main .performance_section .performance {
-  padding: 0 260px;
+  position: relative;
+  padding: 0 240px;
+  overflow: hidden;
 }
 main .performance_section .performance h1 {
   text-align: center;
@@ -479,40 +481,71 @@ main .performance_section .performance h1 {
   color: #fff;
   padding: 35px 0;
 }
+main .performance_section .performance .performance_inner {
+  position: relative;
+}
 main .performance_section .performance .tab {
-  display: flex;
-  border: 1px solid #fff;
-  border-bottom: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 35%;
+  height: 100%;
+  z-index: 2;
 }
-main .performance_section .performance .tab p {
-  width: 25%;
-  padding: 20px 0;
-  text-align: center;
+main .performance_section .performance .tab > div {
   color: #fff;
-  border-right: 1px solid #fff;
-  cursor: pointer;
-  background: none;
-  transition: 0.3s;
 }
-main .performance_section .performance .tab p.on {
+main .performance_section .performance .tab > div:first-child p {
+  display: block;
+}
+main .performance_section .performance .tab > div.on .tab_tit {
   background-color: #fff;
   color: #000;
 }
-main .performance_section .performance .tab p:last-child {
-  border-right: none;
+main .performance_section .performance .tab .tab_tit {
+  cursor: pointer;
+  text-align: center;
+  height: 25%;
 }
-main .performance_section .performance .tab_desc {
+main .performance_section .performance .tab .desc p {
+  display: none;
+  padding: 15px 50px;
+  color: #fff;
+  border-bottom: 1px solid #fff;
+  border-right: 1px solid #fff;
+}
+main .performance_section .performance .tab_bg {
   width: 100%;
   overflow: hidden;
 }
-main .performance_section .performance .tab_desc .suspension {
+main .performance_section .performance .tab_bg .suspension {
   transition: 0.3s;
 }
-main .performance_section .performance .tab_desc .suspension .sus {
+main .performance_section .performance .tab_bg .suspension .sus {
   position: relative;
   width: 100%;
+  /* .sus_desc {
+    position: absolute;
+    bottom: 150px;
+    left: 50px;
+    z-index: 2;
+    width: 40%;
+
+    p {
+      color: #fff;
+      font-size: 18px;
+      line-height: 1.5;
+
+      &.tit {
+        font-weight: 700;
+        text-align: center;
+        margin-bottom: 15px;
+        font-size: 26px;
+      }
+    }
+  } */
 }
-main .performance_section .performance .tab_desc .suspension .sus::before {
+main .performance_section .performance .tab_bg .suspension .sus::before {
   content: "";
   display: block;
   position: absolute;
@@ -522,66 +555,59 @@ main .performance_section .performance .tab_desc .suspension .sus::before {
   height: 100%;
   background: linear-gradient(to left, transparent, #111);
 }
-main .performance_section .performance .tab_desc .suspension .sus .sus_img {
+main .performance_section .performance .tab_bg .suspension .sus .sus_img {
   width: 100%;
   height: 100%;
 }
-main .performance_section .performance .tab_desc .suspension .sus .sus_desc {
-  position: absolute;
-  bottom: 150px;
-  left: 50px;
-  z-index: 2;
-  width: 40%;
-}
-main .performance_section .performance .tab_desc .suspension .sus .sus_desc p {
-  color: #fff;
-  font-size: 18px;
-  line-height: 1.5;
-}
-main .performance_section .performance .tab_desc .suspension .sus .sus_desc p.tit {
-  font-weight: 700;
-  text-align: center;
-  margin-bottom: 15px;
-  font-size: 26px;
-}
-main .performance_section .performance .tab_desc .technology {
+main .performance_section .performance .tab_bg .technology {
   display: none;
 }
-main .performance_section .performance .tab_desc .technology .tech {
-  display: flex;
-  background-color: rgba(0, 0, 0, 0.5);
+main .performance_section .performance .tab_bg .technology .tech {
+  position: relative;
 }
-main .performance_section .performance .tab_desc .technology .tech .tech_video {
+main .performance_section .performance .tab_bg .technology .tech::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 50%;
+  height: 100%;
+  background: linear-gradient(to left, transparent, #111);
 }
-main .performance_section .performance .tab_desc .technology .tech .tech_video video {
+main .performance_section .performance .tab_bg .technology .tech img {
   width: 100%;
   height: 100%;
   border: none;
 }
-main .performance_section .performance .tab_desc .technology .tech .tech_desc {
-  width: 50%;
-  padding: 150px 50px 0;
-  z-index: 1;
-}
-main .performance_section .performance .tab_desc .technology .tech .tech_desc p {
-  font-size: 18px;
-  line-height: 1.5;
-  color: #fff;
-}
-main .performance_section .performance .tab_desc .technology .tech .tech_desc p.tit {
-  font-weight: 700;
-  text-align: center;
-  margin-bottom: 15px;
-  font-size: 26px;
-}
-main .performance_section .performance .tab_desc .buildto {
+main .performance_section .performance .tab_bg .buildto {
   display: none;
 }
-main .performance_section .performance .tab_desc .buildto .build {
+main .performance_section .performance .tab_bg .buildto .build {
   position: relative;
+  /*  .build_desc {
+    position: absolute;
+    bottom: 90px;
+    left: 0;
+    width: 48%;
+    z-index: 1;
+    padding: 0 60px;
+
+    p {
+      font-size: 18px;
+      line-height: 1.5;
+      color: #fff;
+
+      &.tit {
+        font-weight: 700;
+        text-align: center;
+        margin-bottom: 15px;
+        font-size: 26px;
+      }
+    }
+  } */
 }
-main .performance_section .performance .tab_desc .buildto .build::before {
+main .performance_section .performance .tab_bg .buildto .build::before {
   content: "";
   display: block;
   position: absolute;
@@ -591,35 +617,16 @@ main .performance_section .performance .tab_desc .buildto .build::before {
   height: 100%;
   background: linear-gradient(to left, transparent, #111);
 }
-main .performance_section .performance .tab_desc .buildto .build .build_img {
+main .performance_section .performance .tab_bg .buildto .build .build_img {
   width: 100%;
 }
-main .performance_section .performance .tab_desc .buildto .build .build_desc {
-  position: absolute;
-  bottom: 90px;
-  left: 0;
-  width: 48%;
-  z-index: 1;
-  padding: 0 60px;
-}
-main .performance_section .performance .tab_desc .buildto .build .build_desc p {
-  font-size: 18px;
-  line-height: 1.5;
-  color: #fff;
-}
-main .performance_section .performance .tab_desc .buildto .build .build_desc p.tit {
-  font-weight: 700;
-  text-align: center;
-  margin-bottom: 15px;
-  font-size: 26px;
-}
-main .performance_section .performance .tab_desc .gvengine {
+main .performance_section .performance .tab_bg .gvengine {
   display: none;
 }
-main .performance_section .performance .tab_desc .gvengine .engine {
+main .performance_section .performance .tab_bg .gvengine .engine {
   position: relative;
 }
-main .performance_section .performance .tab_desc .gvengine .engine::before {
+main .performance_section .performance .tab_bg .gvengine .engine::before {
   content: "";
   display: block;
   position: absolute;
@@ -629,51 +636,51 @@ main .performance_section .performance .tab_desc .gvengine .engine::before {
   height: 100%;
   background: linear-gradient(to left, transparent, #111);
 }
-main .performance_section .performance .tab_desc .gvengine .engine .engine_img {
+main .performance_section .performance .tab_bg .gvengine .engine .engine_img {
   width: 140%;
   height: 100%;
 }
-main .performance_section .performance .tab_desc .gvengine .engine .engine_desc {
+main .performance_section .performance .tab_bg .gvengine .engine .engine_desc {
   position: absolute;
   bottom: 0px;
-  left: 0;
+  right: 0;
   width: 48%;
   z-index: 1;
   padding: 90px 60px;
 }
-main .performance_section .performance .tab_desc .gvengine .engine .engine_desc p {
+main .performance_section .performance .tab_bg .gvengine .engine .engine_desc p {
   font-size: 18px;
   line-height: 1.5;
   color: #fff;
 }
-main .performance_section .performance .tab_desc .gvengine .engine .engine_desc p.tit {
+main .performance_section .performance .tab_bg .gvengine .engine .engine_desc p.tit {
   font-weight: 700;
   text-align: center;
   margin-bottom: 15px;
   font-size: 26px;
 }
-main .performance_section .performance .tab_desc .gvengine .engine .engine_desc .turbo {
+main .performance_section .performance .tab_bg .gvengine .engine .engine_desc .turbo {
   padding-bottom: 20px;
   border-bottom: 1px solid #fff;
 }
-main .performance_section .performance .tab_desc .gvengine .engine .engine_desc .engine_count {
+main .performance_section .performance .tab_bg .gvengine .engine .engine_desc .engine_count {
   display: flex;
   text-align: center;
   padding-top: 20px;
 }
-main .performance_section .performance .tab_desc .gvengine .engine .engine_desc .engine_count .en_tit {
+main .performance_section .performance .tab_bg .gvengine .engine .engine_desc .engine_count .en_tit {
   margin-bottom: 10px;
 }
-main .performance_section .performance .tab_desc .gvengine .engine .engine_desc .engine_count .count {
+main .performance_section .performance .tab_bg .gvengine .engine .engine_desc .engine_count .count {
   font-size: 35px;
 }
-main .performance_section .performance .tab_desc .gvengine .engine .engine_desc .engine_count .rpm {
+main .performance_section .performance .tab_bg .gvengine .engine .engine_desc .engine_count .rpm {
   font-size: 30px;
 }
-main .performance_section .performance .tab_desc .gvengine .engine .engine_desc .engine_count .high_ps {
+main .performance_section .performance .tab_bg .gvengine .engine .engine_desc .engine_count .high_ps {
   width: 50%;
 }
-main .performance_section .performance .tab_desc .gvengine .engine .engine_desc .engine_count .max_tok {
+main .performance_section .performance .tab_bg .gvengine .engine .engine_desc .engine_count .max_tok {
   width: 50%;
 }
 main .gallery_section {
