--- a/css/main.scss
+++ b/css/main.scss
@@ -573,7 +573,9 @@ main {
     overflow: hidden;
 
     .performance {
-      padding: 0 260px;
+      position: relative;
+      padding: 0 240px;
+      overflow: hidden;
 
       h1 {
         text-align: center;
@@ -583,33 +585,56 @@ main {
         padding: 35px 0;
       }
 
-      .tab {
-        display: flex;
-        border: 1px solid #fff;
-        border-bottom: none;
-
-        p {
-          width: 25%;
-          padding: 20px 0;
-          text-align: center;
-          color: #fff;
-          border-right: 1px solid #fff;
-          cursor: pointer;
-          background: none;
-          transition: .3s;
-
-          &.on {
-            background-color: #fff;
-            color: #000;
-          }
-
-          &:last-child {
-            border-right: none;
-          }
-        }
+      .performance_inner {
+        position: relative;
       }
 
-      .tab_desc {
+      .tab {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 35%;
+        height: 100%;
+        z-index: 2;
+
+        &>div {
+          color: #fff;
+
+          &:first-child {
+            p {
+              display: block;
+            }
+          }
+
+          &.on {
+            .tab_tit {
+              background-color: #fff;
+              color: #000;
+            }
+          }
+        }
+
+        .tab_tit {
+          cursor: pointer;
+          text-align: center;
+          height: 25%;
+        }
+
+        .desc {
+          p {
+            display: none;
+            padding: 15px 50px;
+            color: #fff;
+            border-bottom: 1px solid #fff;
+            border-right: 1px solid #fff;
+          }
+
+        }
+
+
+      }
+
+      .tab_bg {
         width: 100%;
         overflow: hidden;
 
@@ -636,7 +661,7 @@ main {
               height: 100%;
             }
 
-            .sus_desc {
+            /* .sus_desc {
               position: absolute;
               bottom: 150px;
               left: 50px;
@@ -655,7 +680,7 @@ main {
                   font-size: 26px;
                 }
               }
-            }
+            } */
           }
         }
 
@@ -663,37 +688,25 @@ main {
           display: none;
 
           .tech {
-            display: flex;
-            background-color: rgba($color: #000, $alpha: 0.5);
+            position: relative;
 
-            .tech_video {
+            &::before {
+              content: '';
+              display: block;
+              position: absolute;
+              top: 0;
+              left: 0;
               width: 50%;
-
-              video {
-                width: 100%;
-                height: 100%;
-                border: none;
-              }
+              height: 100%;
+              background: linear-gradient(to left, transparent, #111);
             }
 
-            .tech_desc {
-              width: 50%;
-              padding: 150px 50px 0;
-              z-index: 1;
-
-              p {
-                font-size: 18px;
-                line-height: 1.5;
-                color: #fff;
-
-                &.tit {
-                  font-weight: 700;
-                  text-align: center;
-                  margin-bottom: 15px;
-                  font-size: 26px;
-                }
-              }
+            img {
+              width: 100%;
+              height: 100%;
+              border: none;
             }
+
           }
         }
 
@@ -718,7 +731,7 @@ main {
               width: 100%;
             }
 
-            .build_desc {
+            /*  .build_desc {
               position: absolute;
               bottom: 90px;
               left: 0;
@@ -738,7 +751,7 @@ main {
                   font-size: 26px;
                 }
               }
-            }
+            } */
           }
         }
 
@@ -767,7 +780,7 @@ main {
             .engine_desc {
               position: absolute;
               bottom: 0px;
-              left: 0;
+              right: 0;
               width: 48%;
               z-index: 1;
               padding: 90px 60px;
