--- a/css/main.scss
+++ b/css/main.scss
@@ -577,7 +577,7 @@ main {
 
     .performance {
       position: relative;
-      padding: 0 240px;
+      padding: 0 230px;
       overflow: hidden;
 
       h1 {
@@ -602,7 +602,7 @@ main {
 
         &>div {
           color: #fff;
-
+          border-bottom: 1px solid #fff;
           &:first-child {
             p {
               display: block;
@@ -613,9 +613,10 @@ main {
         }
         
         .tab_tit {
+          padding: 30px 0;
           cursor: pointer;
           text-align: center;
-          height: 25%;
+          font-size: 20px;
           &.on {
             background-color: #fff;
             color: #000;
@@ -625,10 +626,9 @@ main {
         .desc {
           p {
             display: none;
-            padding: 15px 50px;
+            padding: 15px 40px;
+            line-height: 1.5;
             color: #fff;
-            border-bottom: 1px solid #fff;
-            border-right: 1px solid #fff;
           }
 
         }
@@ -698,7 +698,7 @@ main {
               position: absolute;
               top: 0;
               left: 0;
-              width: 50%;
+              width: 60%;
               height: 100%;
               background: linear-gradient(to left, transparent, #111);
             }
